tests/valid/definite/Resolution_Valid_1.whiley
void System::main([string] args):
    byte b
    b = 1
    print str(b)
