tests/invalid/simple/List_CompileFail_4.whiley
void System::main([string] args):
     x = 1
     y = x[0]

